codama-syn-helpers/tests-macros/tests/as_verbatim/from_path.fail.rs
use codama_syn_helpers_test_macros::as_verbatim;

#[as_verbatim(foo)]
pub struct Test;

fn main() {}
